// catalog-service/proto/catalog/catalog.proto
syntax = "proto3";

package go.micro.srv.catalog;

service CatalogService {
  rpc CreateProduct(Product) returns (Response) {}
  rpc GetProducts(GetRequest) returns (Response) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
}

message GetRequest {}

message Response {
  bool created = 1;
  Product product = 2;
  repeated Product products = 3;
}

